# game_engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CmakeLists.txt  ReadMe.md  add_files.sh  commits.txt  imgui.ini  main.cpp
assets/models/: ReadMe.md
assets/shaders/: common.hlsli  shperical_map.hlsl
config/debug/: config.json
config/directories/: config.json
config/engine/: settings.json
config/resources/: paths.json
config/scenes/: scene.json  scene1.json  sponza.json
include/: engine.h
src/: engine.cpp  game.cpp  main.cpp
src/config/: config.cpp  config.h  config_manager.cpp  config_manager.h  runtime_settings.cpp  runtime_settings.h
src/core/: application.cpp  application.h  engine.cpp  engine.h  game.cpp  game.h  main.cpp
src/ecs/: component_loaders.cpp  component_loaders.h  entity.h
src/editor/: editor.cpp  editor.h
src/event/: application_event_handler.h  application_event_manager.h  event.h  event_handler.h  keyboard_event_handler.cpp  keyboard_event_handler.h  mouse_event_handler.h  window_event_handler.h  window_event_manager.h
src/file_loader/: file.cpp  file_system_manager.cpp  file_system_manager.h  image_file_loader.h
src/input/: input_context.cpp  input_context.h  input_manager.h  key.h  mouse.h
src/internal_include/: game.h
src/logging/: logger.cpp
src/profiler/: cpu.h  gpu.cpp  gpu.h  gpu_profiler.cpp  gpu_profiler.h  profiler.h  profiler_colors.h
src/renderer/: dx11_render_api.cpp  dx11_renderer.cpp  dx12_renderer.cpp  render_api_factory.cpp  (+1 more)
tools/: CMakeLists.txt
tools/profiling_tools/: CMakeLists.txt
(+644 files in other folders)
